Ajout un peu de style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <form id="appel">
-        <input type="number" id="number" value="1">
+        <input type="number" id="number" value="1" min="1">
         <input type="submit" value="Generate User">
         <select name="pets" id="gender">
             <option value="male">Male</option>
